[package]
name = "mish-web"
version = "0.1.0"
authors = ["chris13524 <chris@hichris.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.1"
projectasiago_mish = "0.1.0"
projectasiago_feta = "0.1.0"

[patch.crates-io]
projectasiago_feta = { path = "../feta" }
projectasiago_mish = { path = "../mish" }